css/main.css
html {
  font-family: Lato, sans-serif;
}

.darkorange {
  color: #eb7808;
}

.lightorange {
  color: #e8984a;
}

.lightblue {
  color: #87c6f8;
}

.medblue {
  color: #4591cf;
}

.darkblue {
  color: #1869ac;
}

.heading-size {
  margin: 1em;
}

.bluegrad {
  background-image: linear-gradient(#4591cf, #87c6f8);
}

.orggrad {
  background-image: linear-gradient(#eb7808, #e8984a);
}

.whitetext {
  color: #fff;
}

.greytext {
  color: #505050;
}

.btn {
  background-color: #eb7808;
  border-radius: 30px;
  border: none;
}

.btn:hover {
  /* background-color: #1869ac; */
  background-color: #000;
}

.current {
  /* color: #eb7808; */
  color: #000;
}

li a {
  color: #87c6f8;
}

li a:hover,
li a:focus {
  /* color: #1869ac; */
  color: #000;
}

.banner {
  background-image: url("../images/banner-homepage.jpg");
  background-size: cover;
  background-repeat: no-repeat;
  height: 80vh;
  background-position: center;
}

.banner-2 {
  background-image: url("../images/banner-adoptpage.jpg");
  background-size: cover;
  background-repeat: no-repeat;
  height: 80vh;
  background-position: top left;
}

.banner-3 {
  background-image: url("../images/banner-processpage.jpg");
  background-size: cover;
  background-repeat: no-repeat;
  height: 80vh;
  background-position: center;
}

.max-width {
  max-width: 22em;
  margin: auto;
}

.formbkg {
  background-color: #1869ac;
}

.i-size {
  height: 32px;
  width: 32px;
}

.formpage {
  background-color: #fff;
  border-radius: 10px;
}

input,
select {
  border-color: #87c6f8;
  border-radius: 4px;
}

[type="checkbox"] + label::before,
[type="radio"] + label::before {
  border-color: #87c6f8;
  border-radius: 4px;
}

.pad-r {
  padding-right: .5rem;
}

.pad-l {
  padding-left: .5rem;
}

.halfsize {
  width: 25%;
}

.bkgcolorblue {
  background-color: #1869ac;
}

.bkgroundwhite {
  background-color: #fff;
}

a.dog-hover:hover::before {
  content: " ";
  display: block;
  position: absolute;
  background: linear-gradient(to bottom, rgba(235, 120, 8, .3), rgba(235, 120, 8, .6));
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.img-container {
  overflow: hidden;
}

.wrapper {
  max-width: 53em;
}

@media only screen and (min-width: 60em) {

  .max-width {
    max-width: 30em;
    margin: auto;
  }

  .heading-size {
    margin: 0;
  }

  .i-size {
    height: 48px;
    width: 48px;
  }

}

